# HFT-7ZERO

./: .gitignore  Cargo.toml  FRONTEND_SPEC.md  HYPERION_INTEGRATION.md  Makefile  README.md  RUN_GUIDE.md  SYSTEM_DOCUMENTATION.md  build.rs  frontend.html  hft-7zero.rs  pyproject.toml  rust-toolchain.toml
.cargo/: config.toml
benches/: benches.md  latency_bench.rs  risk_compute_bench.rs  throughput_bench.rs
cargo/: config.toml
config/: development.toml  production.toml  staging.toml
config/instruments/: cl_futures.yaml  es_futures.yaml  gc_futures.yaml
dashboard/: package-lock.json  package.json  tailwind.config.js
dashboard/src/: App.tsx  index.css
deploy/: prometheus.yml
deploy/nginx/: monitoring.conf
deploy/prometheus/: alerts.yml
deploy/systemd/: hft-stealth.service
docs/: STEALTH_MECHANISMS.md  archhitecture.md
execution/: execution.md  fragmentation.rs  jitter.rs  mod.rs  order_manager.rs  stealth.rs
scripts/: benchmark.sh  deploy.sh  health_check.py  monitoring_dashboard.py  run_prod.sh  setup_uv.sh
signal/: kl_divergence.rs  mandra_gate.rs  mod.rs  signal.md  spectral.rs
signals/: armonic_detector.rs
src/: lib.rs  main.rs
src/causality/: causality.md  causality_network.rs  ccm.rs  fusion.rs  granger.rs  lag_selection.rs  mod.rs  spearman.rs  transfer_entropy.rs
src/config/: constants.rs  mod.rs  settings.rs
src/execution/: mod.rs  schur_router.rs  stealth.rs
src/io/: io_uring.rs  mod.rs  packet_capture.rs  ring_buffer.rs
src/market/: depth.rs  mod.rs  order_book.rs  tick.rs
src/memory/: allocator.rs  allocators.rs  cache_aligned.rs  mod.rs  zero_copy.rs
src/ml/: batch_inference.rs  feature_extractor.rs  jax_bridge.rs  mod.rs
src/monitoring/: alerts.rs  detection_tracker.rs  health_check.rs  interaction_logger.rs  latency_watchdog.rs  metrics.rs  mod.rs  telemetry.rs
src/os/: adaptive_controller.rs  bankruptcy.rs  collector.rs  frequency.rs  gamma_control.rs  hazard.rs  interrupt.rs  liquidity_field.rs  market_os.rs  mod.rs  order_flow.rs  privileged.rs  regime_detector.rs  state_vector.rs
src/risk/: causal_gate.rs  engine.rs  ev_atr.rs  gate.rs  limits.rs  mod.rs  pnl.rs  stress_test.rs  triggers.rs  var.rs
src/utils/: logger.rs  math.rs  mod.rs  stats.rs  time.rs
tests/: harmonic_test.rs
tests/fixtures/: config.yaml  generate_market_data.py
tests/integration/: hyperion_integration_test.rs  risk_gate_test.rs  stealth_test.rs  system_test.rs
tests/unit/: causality_test.rs  order_book_test.rs
