[package]
name = "hft-7zero"
version = "1.0.0"
edition = "2021"
authors = ["rjimenez<tijuanapaint@gmail.com>"]
description = "Production-grade HFT stealth execution system with sub-millisecond latency"
license = "BUSL-1.1"
repository = "https://github.com/deskiziarecords/hft-7zero"
readme = "README.md"
keywords = ["hft", "low-latency", "stealth", "trading", "io-uring"]
categories = ["algorithms", "science", "finance"]
build = "build.rs"

[features]
default = ["production"]
production = ["simd", "optimized-memory", "hardware-acceleration"]
development = ["simd", "benchmarking"]
simd = ["wide", "packed_simd"]
optimized-memory = ["mimalloc"]
hardware-acceleration = []
benchmarking = ["criterion", "iai"]
instrumentation = ["tracing/release_max_level_info", "metrics-exporter-prometheus"]

[profile.dev]
opt-level = 0
debug = true
lto = false
codegen-units = 256

[profile.release]
opt-level = 3
debug = false
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[profile.bench]
opt-level = 3
debug = true
lto = "thin"

[profile.production]
inherits = "release"
opt-level = 3
debug = false
lto = "fat"
codegen-units = 1
panic = "abort"

# ============================================================
# DEPENDENCIES - CORE SYSTEM
# ============================================================

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# Low-latency I/O
io-uring = { version = "0.6" }
nix = { version = "0.26", features = ["socket", "time", "signal"] }
socket2 = "0.5"
libc = "0.2"

# Memory management
mimalloc = { version = "0.1", optional = true }
jemallocator = "0.5"
bytemuck = { version = "1.14", features = ["derive"] }
bytes = "1.5"
memmap2 = "0.9"
ringbuf = "0.3"

# Zero-copy & serialization
rkyv = { version = "0.7", features = ["validation", "strict"] }
abomonation = "0.7"
postcard = { version = "1.0", features = ["alloc"] }

# Numerical computing
ndarray = { version = "0.15", features = ["blas", "rayon"] }
nalgebra = "0.32"
num-traits = "0.2"
num-complex = "0.4"
statrs = "0.16"
rand = { version = "0.8", features = ["small_rng", "getrandom"] }
fastrand = "2.0"
wide = { version = "0.7", optional = true }
packed_simd = { version = "0.3", optional = true }

# FFT & signal processing
rustfft = { version = "6.2" }
# realtime-fft = "0.2"
fftw-sys = { version = "0.6", optional = true }

# Machine learning bridge
libloading = "0.8"
cxx = { version = "=1.0.122", features = ["c++14"] }
cxx-build = "=1.0.122"

# Causality & statistics
# argmin = "0.9"
# argmin-math = "0.4"
# linfa = "0.7"
# linfa-kernel = "0.7"
# nalgebra-sparse = "0.11"

# Risk & time series
# quantmath = "0.3"
# risk = "0.4"
# garch = "0.2"

# Stealth & cryptography
ring = "0.17"
aes-gcm = "0.10"
rand_chacha = "0.3"
blake3 = "=1.5.5"

# Monitoring
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
metrics = "0.22"
metrics-exporter-prometheus = { version = "0.12", optional = true }
prometheus = "0.13"
opentelemetry = { version = "0.21", optional = true }
opentelemetry-otlp = { version = "0.14", optional = true }

# Configuration
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8.19"
config = { version = "0.14", default-features = false, features = ["toml"] }

# Utilities
home = "=0.5.9"
criterion = { version = "0.5", features = ["html_reports", "async_tokio"], optional = true }
iai = { version = "0.1", optional = true }
crossbeam = "0.8"
dashmap = "5.5"
parking_lot = { version = "0.12", features = ["deadlock_detection"] }
once_cell = "1.19"
lazy_static = "1.4"
arc-swap = "1.6"
rayon = "=1.10.0"
cpu-time = "1.0"
num_cpus = "1.16"
chrono = { version = "0.4", features = ["serde"] }
time = "=0.3.36"
clap = { version = "=4.4.18", features = ["derive", "env"] }
anyhow = "1.0"
thiserror = "1.0"
smallvec = "1.11"
arrayvec = "0.7"
heapless = "0.8"
bitflags = "2.4"

# ============================================================
# DEV DEPENDENCIES
# ============================================================

[dev-dependencies]
proptest = "1.4"
test-case = "3.3"
mockall = "0.12"
tempfile = "=3.10.1"
rand_distr = "0.4"
approx = "0.5"

[[bench]]
name = "latency_bench"
harness = false
required-features = ["benchmarking"]

[[bench]]
name = "throughput_bench"
harness = false
required-features = ["benchmarking"]

[[bench]]
name = "risk_compute_bench"
harness = false
required-features = ["benchmarking"]

# ============================================================
# BUILD DEPENDENCIES
# ============================================================

[build-dependencies]
cc = { version = "1.0", features = ["parallel"] }
cmake = "0.1"
bindgen = "0.69"
cxx-build = "=1.0.122"
# metabuild = "0.1"

# ============================================================
# TARGET-SPECIFIC OPTIMIZATIONS
# ============================================================

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
features = ["production", "instrumentation"]

[package.metadata.cargo-all-features]
deny-unknown-features = true
skip-features = ["hardware-acceleration"]

[[test]]
name = "hyperion_integration_test"
path = "tests/integration/hyperion_integration_test.rs"
