[project]
name = "hft-stealth"
version = "1.0.0"
description = "Production HFT Stealth Execution System"
authors = [
    {name = "HFT Stealth Team", email = "team@hft-stealth.io"}
]
license = {text = "BUSL-1.1"}
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "plotly>=5.17.0",
    "dash>=2.14.0",
    "aiohttp>=3.8.0",
    "websockets>=11.0",
    "prometheus-client>=0.17.0",
    "pyyaml>=6.0",
    "click>=8.1.0",
    "rich>=13.4.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "pytz>=2023.3",
    "scipy>=1.10.0",
    "scikit-learn>=1.3.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.0.280",
    "mypy>=1.4.0",
    "pre-commit>=3.3.0",
]
monitoring = [
    "prometheus-client>=0.17.0",
    "grafana-client>=0.5.0",
]
backtest = [
    "backtrader>=1.9.78",
    "vectorbt>=0.24.0",
]

[project.scripts]
hft-dashboard = "scripts.monitoring_dashboard:main"
hft-health = "scripts.health_check:main"
hft-backtest = "python.backtest_engine:main"

[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests/python"]
addopts = "-v --cov=python --cov-report=html"
